# GRPCCountService

./: .gitattributes  .gitignore  CMakeLists.txt  CountServiceImplementation.hpp  GRPCCountService.cpp  GRPCCountService.h  counter_pb2.py  pythonclient.bat
cmake_modules/: findGRPCPlugin.cmake
cpp/: CountServiceImplementation.hpp  GRPCCountService.cpp
proto/: counter.proto
python/: grpcclient.py
